<resources>
    <string name="app_name">웨이트 트레이닝</string>
    <string name="copyright">development by ⓒskymanlab</string>
    <string name="type_muscle_area_chest">가슴</string>
    <string name="type_muscle_area_shoulder">어깨</string>
    <string name="type_muscle_area_lat">등</string>
    <string name="type_muscle_area_upper_body">하체</string>
    <string name="type_muscle_area_arm">팔</string>
    <string name="type_muscle_area_etc">기타</string>
    <string name="type_group_a">A 그룹</string>
    <string name="type_group_b">B 그룹</string>
    <string name="type_group_c">C 그룹</string>
    <string name="type_group_d">D 그룹</string>
    <string name="type_group_e">E 그룹</string>
    <string name="network_state_notConnectNetwork">네트워크에 연결되지 않아서 데이터를 가져올 수 없습니다.</string>
    <string name="f_home_title">홈</string>
    <string name="f_home_myStateTitle">나의 상태 알림이</string>
    <string name="f_home_myAttendanceState">나의 출석 상태</string>
    <string name="f_home_myAttendanceState_check">출석하기</string>
    <string name="f_home_myAttendanceState_stateOn">출석 완료</string>
    <string name="f_home_myAttendanceState_stateOn_snack_alreadyExist">이미 출석 완료 하였습니다.</string>
    <string name="f_home_myAttendanceState_stateOn_snack_saveComplete">출석 완료하였습니다.</string>
    <string name="f_home_myAttendanceState_stateOff">미출석</string>
    <string name="f_home_myActiveState">나의 활동 상태</string>
    <string name="f_home_myActiveState_enter">입장</string>
    <string name="f_home_myActiveState_exercise">운동 중</string>
    <string name="f_home_myActiveState_exit">퇴장</string>
    <string name="f_home_fitnessCenterMemberList_title">피트니스 회원 목록</string>
    <string name="f_home_indicator_doNotRegisterFitnessCenter">피트니스 센터를 아직 등록하지 않았습니다.</string>
    <string name="f_home_indicator_isNotDisclosedFitnessCenter">비공개 상태입니다.</string>
    <string name="f_home_snack_notConnectedNetwork">네트워크에 연결되지 않아서 데이터를 가져올 수 없습니다.</string>
    <string name="f_home_snack_notConnectedNetwork_actionButton">확인</string>
    <string name="f_home_"></string>
    <string name="f_training_title">트레이닝</string>
    <string name="f_training_eventList">종목 리스트</string>
    <string name="f_training_eventList_comment">각 부위별로 등록되어 있는 목록을 확인합니다.</string>
    <string name="f_training_fitnessProgram">피트니스 프로그램</string>
    <string name="f_training_fitnessProgram_comment">자신의 운동 프로그램을 만들거나, 추천 프로그램을 가져올 수 있습니다.</string>
    <string name="f_intervene_title">참견하기</string>
    <string name="f_more_title">더보기</string>
    <string name="f_more_registerDayCount_title">등록일</string>
    <string name="f_more_registerDayCount_default">- 일</string>
    <string name="f_more_trainingCount_title">운동 횟수</string>
    <string name="f_more_trainingCount_default">- 회</string>
    <string name="f_more_fitnessCenter">피트니스 센터</string>
    <string name="f_more_target">목표</string>
    <string name="f_more_setting">설정</string>
    <string name="f_more_myTrainingInfo">나의 트레이닝</string>
    <string name="f_more_notice">공지사항</string>
    <string name="f_more_serviceCenter">건의하기</string>
    <string name="f_more_serviceCenter_emailTitle">개발자에게 건의하기</string>
    <string name="f_userInfo_title">내 정보</string>
    <string name="f_userInfo_photo_change">변경</string>
    <string name="f_userInfo_authProvider">인증 제공자</string>
    <string name="f_userInfo_authProvider_default">구글</string>
    <string name="f_userInfo_email">이메일</string>
    <string name="f_userInfo_email_default">skyman1325@gmail.com</string>
    <string name="f_userInfo_name">이름</string>
    <string name="f_userInfo_name_default">장동익</string>
    <string name="f_userInfo_logout">로그아웃</string>
    <string name="f_userInfo_withdraw">회원탈퇴</string>
    <string name="f_userInfo_"></string>
    <string name="f_userTrainingInfo_title">나의 트레이닝</string>
    <string name="f_userTrainingInfo_trainingLevel_title">나의 레벨</string>
    <string name="f_userTrainingInfo_trainingLevel">레벨</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_title">3대 측정 무게</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_squat">스쿼트</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_squat_default">0 kg</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_deadlift">데드 리프트</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_deadlift_default">0 kg</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_benchPress">벤치 프레스</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_benchPress_default">0 kg</string>
    <string name="f_userTrainingInfo_threeMajorMeasurements_register">등록</string>
    <string name="f_userTrainingInfo_noInput">아직 입력되지 않았습니다.</string>
    <string name="f_userTrainingInfo_"></string>
    <string name="f_notice_title">공지사항</string>
    <string name="f_notice_noData">공지사항이 없습니다.</string>
    <string name="f_notice_"></string>
    <string name="f_fitnessCenter_title">피트니스 센터</string>
    <string name="f_fitnessCenter_name">피트니스 센터를</string>
    <string name="f_fitnessCenter_address">등록해주세요.</string>
    <string name="f_fitnessCenter_registeredInfo_title">등록 정보</string>
    <string name="f_fitnessCenter_registeredInfo_memberNumber">회원 번호</string>
    <string name="f_fitnessCenter_registeredInfo_memberNumber_default">피트니스 센터 회원 번호입니다.</string>
    <string name="f_fitnessCenter_registeredInfo_contractDate">등록일</string>
    <string name="f_fitnessCenter_registeredInfo_contractDate_default">피트니스 센터에 등록한 날짜입니다.</string>
    <string name="f_fitnessCenter_registeredInfo_expiryDate">만료일</string>
    <string name="f_fitnessCenter_registeredInfo_expiryDate_default">피트니스 센터 등록 마지막 날입니다.</string>
    <string name="f_fitnessCenter_registeredInfo_attendanceDateCount">출석일수</string>
    <string name="f_fitnessCenter_registeredInfo_attendanceDateCount_default">피트니스 센터에서 출석한 일 수입니다.</string>
    <string name="f_fitnessCenter_settingInfo_title">설정 정보</string>
    <string name="f_fitnessCenter_settingInfo_isAllowedAccessNotification">접근 알림</string>
    <string name="f_fitnessCenter_settingInfo_isAllowedAccessNotification_default">피트니스 센터에 접근여부를 알림으로 알려줄지에 대한 설정값입니다.</string>
    <string name="f_fitnessCenter_settingInfo_isAllowedAccessNotification_true">실행 중</string>
    <string name="f_fitnessCenter_settingInfo_isAllowedAccessNotification_false">중지</string>
    <string name="f_fitnessCenter_settingInfo_isDisclosed">공개 여부</string>
    <string name="f_fitnessCenter_settingInfo_isDisclosed_default">다른 사람에게 피트니스 센터 등록 공개 여부에 대한 설정입니다.</string>
    <string name="f_fitnessCenter_settingInfo_isDisclosed_true">공개</string>
    <string name="f_fitnessCenter_settingInfo_isDisclosed_false">비공개</string>
    <string name="f_fitnessCenter_"></string>
    <string name="f_fitness_center_search_title">피트니스 센터 검색</string>
    <string name="f_fitness_center_search_top_bar_end_button">다음</string>
    <string name="f_fitness_center_search_address">주소</string>
    <string name="f_fitness_center_search_address_default">검색에 성공하면 해당 주소가 표시됩니다.</string>
    <string name="f_fitness_center_search_snack_no_location_permission">위치 권한이 거부되었습니다.</string>
    <string name="f_fitness_center_search_snack_check_data_false">피트니스 센터를 먼저 검색해주세요.</string>
    <string name="f_fitness_center_search_snack_already_exist">이미 존재하는 피트니스 센터입니다. </string>
    <string name="f_fitness_center_search_"></string>
    <string name="f_fitness_center_register_title">피트니스 센터 등록</string>
    <string name="f_fitness_center_register_setting">피트니스 센터 설정하기</string>
    <string name="f_fitness_center_register_top_bar_end_button">등록</string>
    <string name="f_fitness_center_register_name">이름</string>
    <string name="f_fitness_center_register_name_default">센터명을 입력해주세요.</string>
    <string name="f_fitness_center_register_address">주소</string>
    <string name="f_fitness_center_register_address_default">주소를 입력해주세요.</string>
    <string name="f_fitness_center_register_period">등록 기간</string>
    <string name="f_fitness_center_register_period_default">클릭하셔서 등록 기간을 설정해주세요.</string>
    <string name="f_fitness_center_register_contract_date">등록일</string>
    <string name="f_fitness_center_register_contract_date_default">클릭하여 등록일을 설정해주세요.</string>
    <string name="f_fitness_center_register_expiry_date">만료일</string>
    <string name="f_fitness_center_register_expiry_date_default">클릭하여 만료일을 설정해주세요.</string>
    <string name="f_fitness_center_register_alert_register_title">피트니스 센터를 등록하시겠습니까?</string>
    <string name="f_fitness_center_register_alert_register_message">검색된 피트니스 센터를 나의 피트니스 센터로 등록합니다.</string>
    <string name="f_fitness_center_register_alert_register_bt_positive">등록</string>
    <string name="f_fitness_center_register_alert_register_bt_negative">취소</string>
    <string name="f_fitness_center_register_snack_no_selected_date">등록일, 마감일이 선택되지 않았습니다.</string>
    <string name="f_fitness_center_register_snack_save_complete">데이터 저장이 완료되었습니다.</string>
    <string name="f_fitness_center_register_"></string>
    <string name="f_fitnessCenterRegisteredInfo_title">등록 정보</string>
    <string name="f_fitnessCenterRegisteredInfo_contractDate">등록일</string>
    <string name="f_fitnessCenterRegisteredInfo_expiryDate">만료일</string>
    <string name="f_fitnessCenterRegisteredInfo_snack_noChangedData">변경된 데이터가 없습니다.</string>
    <string name="f_fitnessCenterRegisteredInfo_snack_modificationComplete">날짜 수정이 완료되었습니다.</string>
    <string name="f_fitnessCenterRegisteredInfo_registerCancel">등록취소</string>
    <string name="f_fitnessCenterRegisteredInfo_alert_registerCancel_title">등록을 취소하시겠습니까?</string>
    <string name="f_fitnessCenterRegisteredInfo_alert_registerCancel_message">내가 등록한 피트니스 센터에 대한 모든 정보를 삭제합니다.</string>
    <string name="f_fitnessCenterRegisteredInfo_alert_registerCancel_button_positive">확인</string>
    <string name="f_fitnessCenterRegisteredInfo_alert_registerCancel_button_negative">취소</string>
    <string name="f_fitnessCenterRegisteredInfo_snack_registerCancelComplete">피트니스 센터 등록 취소를 완료하였습니다.</string>
    <string name="include_maker_step8_detail_program_setting_item_muscle_area_default">가슴</string>
    <string name="include_maker_step8_detail_program_setting_item_divider">/</string>
    <string name="include_maker_step8_detail_program_setting_item_event_name_default">벤치 프레스</string>
    <string name="include_maker_step8_detail_program_setting_item_set_number">- 세트 수</string>
    <string name="include_maker_step8_detail_program_setting_item_set_number_default">0 회</string>
    <string name="include_maker_step8_detail_program_setting_item_rest_time">- 휴식 시간</string>
    <string name="include_maker_step8_detail_program_setting_item_rest_time_default">0분 0초</string>
    <string name="include_detail_program_item_order">1</string>
    <string name="include_detail_program_item_muscle_area_default">가슴</string>
    <string name="include_detail_program_item_event_name_default">벤치 프레스</string>
    <string name="include_detail_program_item_set_number">세트 수</string>
    <string name="include_detail_program_item_set_number_default">0 세트</string>
    <string name="include_detail_program_item_rest_time">휴식 시간</string>
    <string name="include_detail_program_item_rest_time_default">0분 0초</string>
    <string name="custom_list_step6_event_item_number_default">0</string>
    <string name="custom_list_step6_event_item_muscle_area_default">가슴</string>
    <string name="custom_list_step6_event_item_event_name_default">벤치 프레스</string>
    <string name="custom_list_step6_event_item_go_content_description">go</string>
    <string name="custom_dialog_attendance_title">출석부</string>
    <string name="custom_dialog_attendance_attendanceDate">출석일</string>
    <string name="custom_dialog_attendance_contractDate">등록일</string>
    <string name="custom_dialog_attendance_expiryDate">만료일</string>
    <string name="nav_bottom_bar_home">홈</string>
    <string name="nav_bottom_bar_training">트레이닝</string>
    <string name="nav_bottom_bar_intervene">참견</string>
    <string name="nav_bottom_bar_more">더보기</string>
</resources>