<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bottom_bar_home"
        android:title="@string/nav_bottom_bar_home"
        android:icon="@drawable/nav_bottom_bar_icon_home"/>
    <item
        android:id="@+id/nav_bottom_bar_training"
        android:title="@string/nav_bottom_bar_training"
        android:icon="@drawable/nav_bottom_bar_icon_training"/>
    <item
        android:id="@+id/nav_bottom_bar_intervene"
        android:title="@string/nav_bottom_bar_intervene"
        android:icon="@drawable/nav_bottom_bar_icon_intervene"/>
    <item
        android:id="@+id/nav_bottom_bar_more"
        android:title="@string/nav_bottom_bar_more"
        android:icon="@drawable/nav_bottom_bar_icon_more"/>

</menu>