<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".management.project.fragment.More.UserInfoFragment">

    <include
        layout="@layout/include_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_default"
        android:background="@color/browser_actions_divider_color" />

    <!-- photo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/f_userInfo_photo"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/f_userInfo_photoChange"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/eland_choice_medium"
            android:text="@string/f_userInfo_photo_change"
            android:visibility="gone"
            app:strokeColor="@color/colorPrimary" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!-- auth provider -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eland_choice_light"
            android:text="@string/f_userInfo_authProvider"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/f_userInfo_authProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/eland_choice_bold"
            android:text="@string/f_userInfo_authProvider_default"
            android:textColor="@color/colorTextBlack" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!--  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eland_choice_light"
            android:text="@string/f_userInfo_email"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/f_userInfo_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/eland_choice_bold"
            android:text="@string/f_userInfo_email_default"
            android:textColor="@color/colorTextBlack" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!--  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eland_choice_light"
            android:text="@string/f_userInfo_name"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/f_userInfo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/eland_choice_bold"
            android:text="@string/f_userInfo_name_default"
            android:textColor="@color/colorTextBlack" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/f_userInfo_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/eland_choice_medium"
            android:text="@string/f_userInfo_logout" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/f_userInfo_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/eland_choice_medium"
            android:text="@string/f_userInfo_withdraw" />

    </LinearLayout>
</LinearLayout>