<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/custom_dialog_attendance_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/eland_choice_bold"
            android:text="@string/custom_dialog_attendance_title"
            android:textAlignment="gravity"
            android:textColor="@color/colorTextBlack" />
    </FrameLayout>

    <include
        layout="@layout/include_divider_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/custom_dialog_attendance_calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mcv_calendarMode="month"
        app:mcv_selectionColor="@color/colorBackgroundFirst"
        app:mcv_selectionMode="single"
        app:mcv_firstDayOfWeek="sunday"
        app:mcv_showOtherDates="decorated_disabled" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/attendance_calendar_contract_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/custom_dialog_attendance_contractDate" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/attendance_calendar_expiry_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/custom_dialog_attendance_expiryDate" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/attendance_calendar_date_checker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/custom_dialog_attendance_attendanceDate" />

    </LinearLayout>


</LinearLayout>